[metadata]
name = hexathon
version = 0.1.0
description = Common and uncommon hex string operations
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/nolash/python-hexathon
keywords =
	hex
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Topic :: Software Development :: Libraries
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license = WTFPL
licence_files =
	LICENSE

[options]
python_requires = >= 3.6
packages = 
	hexathon
